force-app/main/default/objects/NTE__c/NTE__c.object-meta.xml
<CustomObject>
    <description>NTE amounts and limits</description>
    <label>NTE</label>
    <nameField>
        <displayFormat>NTE-{0000}</displayFormat>
        <label>NTE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NTEs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>