force-app/main/default/objects/NTE__c/fields/NTE_Type__c.field-meta.xml
<CustomField>
    <fullName>NTE_Type__c</fullName>
    <label>NTE Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>