force-app/main/default/objects/NTE__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overgrowth</fullName>
            </value>
            <value>
                <fullName>In-Scope</fullName>
            </value>
            <value>
                <fullName>Trash Removal</fullName>
            </value>
            <value>
                <fullName>Drains and Cleans</fullName>
            </value>
            <value>
                <fullName>Pool Pump</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>