force-app/main/default/objects/NTE__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOWLAWN</fullName>
            </value>
            <value>
                <fullName>SALESCLEAN</fullName>
            </value>
            <value>
                <fullName>GREENMAN</fullName>
            </value>
            <value>
                <fullName>POOLCLEANING</fullName>
            </value>
            <value>
                <fullName>DESERTSCAPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>